--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
+// Reseting
 *,
 *::before,
 *::after {
@@ -69,4 +70,15 @@ select {
 
 body {
   background-color: #242933;
+}
+
+// Styles
+.wrapper {
+  height: 100vh;
+  padding: 0 15px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
