--- a/src/components/WordsList/styles.module.scss
+++ b/src/components/WordsList/styles.module.scss
@@ -1,6 +1,4 @@
-import styled from "styled-components";
-
-export const WordsListStyled = styled.div`
+.words-list {
   max-width: 700px;
   height: 210px;
 
@@ -12,4 +10,4 @@ export const WordsListStyled = styled.div`
   display: flex;
   flex-wrap: wrap;
   gap: 5px 15px;
-`;
+}
