--- a/src/components/AppSettings/styles.module.scss
+++ b/src/components/AppSettings/styles.module.scss
@@ -1,16 +1,35 @@
-.settings__icon {
-  width: 18px;
-  height: 18px;
+.settings {
+  .settings__icon {
+    width: 18px;
+    height: 18px;
 
-  cursor: pointer;
+    cursor: pointer;
 
-  path {
-    fill: #596172;
-    transition: fill 0.3s ease;
+    path {
+      fill: #596172;
+      transition: fill 0.3s ease;
+    }
+
+    &:hover path {
+      fill: lightcoral;
+      transition: fill 0.3s ease;
+    }
   }
 
-  &:hover path {
-    fill: lightcoral;
-    transition: fill 0.3s ease;
+  .settings__wrapper {
+    width: 700px;
+    max-height: 600px;
+    height: 100%;
+
+    border-radius: 4px;
+
+    overflow: scroll;
+    scrollbar-width: none;
+
+    background: #242933;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 }
