--- a/src/components/DropDown/styles.module.scss
+++ b/src/components/DropDown/styles.module.scss
@@ -45,6 +45,14 @@
 
       opacity: 1;
       transition: opacity 0.25s ease-in 0.5s;
+
+      .dropdown__item-text {
+        -webkit-user-select: none;
+        -khtml-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
     }
   }
 
