--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -24,6 +24,8 @@ body {
     main {
       flex: 1 1 auto;
 
+      z-index: 1;
+
       display: flex;
       align-items: center;
       justify-content: center;
