--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -14,6 +14,7 @@ body {
 
     header {
       height: auto;
+      z-index: 2;
 
       flex: 0 0 auto;
       display: flex;
@@ -23,7 +24,6 @@ body {
 
     main {
       flex: 1 1 auto;
-
       z-index: 1;
 
       display: flex;
