--- a/src/components/DropDown/styles.module.scss
+++ b/src/components/DropDown/styles.module.scss
@@ -80,6 +80,10 @@
       display: flex;
       align-items: center;
       gap: 15px;
+
+      &:last-child {
+        padding-bottom: 30px;
+      }
     }
   }
 
