--- a/src/components/AppSettings/styles.module.scss
+++ b/src/components/AppSettings/styles.module.scss
@@ -21,7 +21,7 @@
     max-height: 600px;
     height: 100%;
 
-    border-radius: 4px;
+    border-radius: 0.5em;
 
     overflow: scroll;
     scrollbar-width: none;
