add description for the dropdown

--- a/src/components/DropDown/styles.module.scss
+++ b/src/components/DropDown/styles.module.scss
@@ -87,6 +87,13 @@
         padding-bottom: 30px;
       }
     }
+
+    .dropdown__description {
+      padding: 5px 25px;
+      font-size: 14px;
+      cursor: default;
+      color: #f6f0e9;
+    }
   }
 
   .dropdown__arrow,
